# Rust-High-Performance

./: README.md
Chapter01/: iterators.rs
Chapter01/itertools/: Cargo.toml
Chapter02/: example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs
Chapter02/example8/: Cargo.toml  build.rs
Chapter03/: example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs
Chapter04/: example1.rs
Chapter04/example2/: Cargo.toml
Chapter05/: README.txt
Chapter06/example1/: Cargo.toml
Chapter06/example2/: Cargo.toml
Chapter06/example3/: Cargo.toml
Chapter07/: example1.rs  example2.rs  example3.rs  example4.rs
Chapter08/example1/: Cargo.toml
Chapter08/example10/: Cargo.toml
Chapter08/example11/: .env  Cargo.toml  test.sqlite
Chapter08/example11/migrations/2018-02-19-211409_initial_schema/: down.sql  up.sql
Chapter08/example11/src/: main.rs
Chapter08/example12/: Cargo.toml
Chapter08/example2/: Cargo.toml
Chapter08/example3/: Cargo.toml
Chapter08/example4/: Cargo.toml
Chapter08/example5/: Cargo.toml
Chapter08/example6/: Cargo.toml
Chapter08/example7/: Cargo.toml
Chapter08/example8/: Cargo.toml
Chapter08/example9/: Cargo.toml
Chapter09/: example1.rs  example2.rs  example3.rs  example4.rs
Chapter09/example5/: Cargo.toml
Chapter09/example6/: Cargo.toml
Chapter10/: example1.rs  example10.rs  example11.rs  example12.rs  example13.rs  example14.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs
Chapter11/: example6.rs  example7.rs
(+47 files in other folders)
